# fullstack-meme-maker

./: .env  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
cloudformation/: cluster.yml  meme-maker-service.yaml
meme-api/: .flake8  .gitignore  Dockerfile  prestart.sh  pyproject.toml
meme-api/app/: initial_data.py  main.py
meme-api/app/api/api_v1/: api.py
meme-api/app/api/api_v1/endpoints/: __init__.py  memes.py
meme-api/app/assets/: base_meme_definition.json
meme-api/app/core/: config.py  database.py
meme-api/app/crud/: meme_crud.py
meme-api/app/schemas/: __init__.py  image.py  meme.py  text_field.py
meme-api/app/tests/api/api_v1/: test_memes.py
meme-api/scripts/: lint.sh  test.sh
meme-react-frontend/: Dockerfile  README.md  package.json
meme-react-frontend/src/: App.test.tsx  App.tsx  constants.ts  index.tsx
meme-react-frontend/src/app/: store.ts
meme-react-frontend/src/features/memes/: MemeCustomizer.tsx  MemeThumbnails.tsx  Memes.module.css  Memes.tsx  SelectedMeme.tsx  memesAPI.ts  memesSlice.spec.ts  memesSlice.ts
