[tool.poetry]
name = "meme-api"
version = "0.1.0"
description = "Meme Maker API"
authors = ["Fergus <fergusdixon101@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.13.3"
fastapi = "^0.63.0"
pydantic = "^1.4"
gunicorn = "^20.0.4"
aiofiles = "^0.5.0"
requests = "^2.25.1"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]
ipython = {version = "^8.10.0", optional = true}
mypy = "^0.770"
black = "^20.8b1"
isort = "^5.8.0"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 117
profile = "black"
[tool.black]
line-length = 117

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
